# partage-twg

./: .gitignore  README.md  hie.yaml  partage.cabal  stack.yaml
examples/: wrapping.tsv
src/NLP/Partage/: AStar.hs  DAG.hs  Earley.hs  SOrd.hs  Tree.hs  Tree.hs_backup
src/NLP/Partage/AStar/: Auto.hs  Base.hs  Chart.hs  Chart_backup.hs  Command.hs  Deriv.hs  ExtWeight.hs  IO.hs  Item.hs  Parsed.hs
src/NLP/Partage/AStar/Deriv/: Gorn.hs
src/NLP/Partage/Earley/: Auto.hs  AutoAP.hs  Base.hs  Chart.hs  ExtWeight.hs  Item.hs
src/NLP/Partage/Format/: Brackets.hs
src/NLP/Partage/Tree/: Other.hs
tests/: Golden.hs  Parser.hs  TestSet.hs  Unit.hs  UnitTestSet.hs  test.hs
tests/golden/astar/: fournir.golden
tests/golden/symbolic/: someone.golden  someone.inp
tests/golden/weight/: fournir.inp
tools/: partage-twg.hs  partage.hs
